P4ADEV-1774 merged develop and code aligned